--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "sools-wiki",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "sools-core": "^1.0.0",
-    "sools-modeling": "^1.0.0"
-  }
+ "name": "sools-wiki",
+ "version": "1.1.0",
+ "description": "",
+ "main": "index.js",
+ "scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1"
+ },
+ "author": "",
+ "license": "ISC",
+ "dependencies": {
+  "sools-core": "1.6.0",
+  "sools-modeling": "1.3.0"
+ }
 }
