--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "sools-wiki",
- "version": "1.3.0",
+ "version": "1.4.0",
  "description": "",
  "main": "index.js",
  "scripts": {
@@ -9,7 +9,11 @@
  "author": "",
  "license": "ISC",
  "dependencies": {
-  "sools-core": "1.9.0",
-  "sools-modeling": "1.5.0"
+  "sools-core": "^1.15.0",
+  "sools-modeling": "^1.6.0"
+ },
+ "repository": {
+  "type": "git",
+  "url": "https://github.com/kanaxz/sools-wiki"
  }
 }
